# ownit-backend

./: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COPYRIGHT  Dockerfile  README.md  compose.dev.yml  compose.yaml  compose.yml  conftest.py  entrypoint.sh  eslint.config.mjs  mcp.json  mise.toml  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  git-leaks.yml  release-please.yml  semgrep.yml  todo-tracking.yml
app/: app.config.ts
app/layouts/: default.vue
app/lib/: auth-client.ts
app/middleware/: auth.global.ts
app/pages/: index.vue  login.vue  profile.vue
apps/behavior/: apps.py
apps/chores/: api.py  api_schema.py  apps.py  forms.py  models.py  tasks.py  utils.py
apps/core/: api_schema.py  apps.py  urls.py  utils.py  views.py
apps/pages/: apps.py  urls.py  views.py
apps/users/: admin.py  api.py  apps.py  headless_adapter.py  models.py
assets/styles/: daisyui.css
config/: api.py  asgi.py  celery.py  middleware_wrappers.py  urls.py  wsgi.py
config/settings/: __init__.py
docs/: architechture.md  deployment.md  index.md  setup.md  testing.md
e2e/: test_allauth_snapshots.py  test_landing_page.py  test_smoke.py
plugins/: crypto-shim.ts.disable
server/db/: conn.ts  index.ts
server/lib/: auth.ts
server/plugins/: auth-init.ts
server/routes/: health.ts
static/css/: tailwind.css
templates/: base.html
tests/: test_allauth_templates.py  test_basics.py  test_env_docs.py  test_headless_session.py
(+57 files in other folders)
